# Atividades-PUCMG

./: .gitignore  .gitmodules
OBI/: figurinhas.c  ilhas.c  piso.c
Primeiro periodo/AED-1/Java/: Aula_160518.java  ExMetodos.java
Primeiro periodo/ICC-1/Trabalho - Linguagem C/: Exer2.c  Exer3.c  Exer4.c  Exer5.c
Primeiro periodo/OBI/: figurinhas.c  ilhas.c  piso.c
Primeiro periodo/Textos no Latex/TP02 - ICC/: TP02.tex
Primeiro período/AED-1/Java/: Aula1.java  Aula1306.java  Exercicio1.java  Lista05.java  aula_2504.java
Primeiro período/AED-1/Rust/Trabalho Prático 16 - AED1/lista16/: Cargo.toml
Primeiro período/AED-1/Rust/Trabalho Prático 16 - AED1/lista16/src/: funcionario.rs  main.rs
Primeiro período/ICC-1/Trabalho - Linguagem C/: Exer1.c  Exer6.c  Exer7.c  Exer8.c
Primeiro período/OBI/: figurinhas.c  ilhas.c  piso.c
Primeiro período/Textos no Latex/Computadores e sociedade/: TP02.aux  TP02.fdb_latexmk  TP02.fls  TP02.ilg  TP02.lof  TP02.lot  TP02.tex  TP02.toc
Quarto periodo/ADA/: busca_em_largura.cpp  contar_maiuscula.cpp  pre_arvore_binaria.cpp  unicursal.cpp
Quarto periodo/BD-1/: Biblioteca Session.sql
Quarto período/AG-1/grafos/: Cargo.toml
Quarto período/AG-1/grafos/src/: lib.rs  main.rs
Quarto período/ES-1/: EngSoftSlide.txt
Quinto periodo/FTC/: lista01.md
Quinto periodo/FTC/Lista05/: 2a.jff  (+1 more)
Terceiro periodo/LAC/: aula1.asm  fibonacci.asm  lista2_13.asm  lista3_1.asm
Terceiro período/AED3/: Resuminho_AEDIII_Primeira_Prova.txt
Terceiro período/IPI/: eu_cientista_agosto_2019.txt
Terceiro período/LAC/: aula2.asm  lista2_10.asm
(+527 files in other folders)
