[package]
name = "grafos"
version = "0.1.0"
authors = ["SeraphyBR <luisjuniorbr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
human-panic = "1.0.1"
ndarray = "0.12.1"