[package]
name = "lista16"
version = "0.1.0"
authors = ["SeraphyBR <luisjuniorbr@gmail.com>"]
edition = "2018"

[dependencies]
brids = { version = "0.4.0", features = ["serde"]}
chrono = { version = "0.4.7", features = ["serde"] }
human-panic = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
